# kernel_devices_google_akita

./: BUILD.bazel  akita_gki.fragment  build.config.akita  build.config.akita.gki.fragment  build_akita.sh  device.bazelrc  update_symbol_list.sh  vendor_kernel_boot_modules.akita
display/: BUILD.bazel  Kbuild  Makefile  panel-google-ak3a.c  panel-google-ak3b.c
dts/: BUILD.bazel
dts/google/: Makefile  zuma-akita-aoc.dtsi  zuma-akita-audio-ti.dtsi  zuma-akita-audio.dtsi  zuma-akita-battery-data.dtsi  zuma-akita-battery.dtsi  zuma-akita-bcl.dtsi  zuma-akita-bluetooth.dtsi  zuma-akita-board.dtsi  zuma-akita-camera-pmic.dtsi  zuma-akita-camera.dtsi  zuma-akita-charging.dtsi  zuma-akita-common.dtsi  zuma-akita-cp-s5300-thermal-zone.dtsi  zuma-akita-dev1-gnss.dts  zuma-akita-dev1.dts  zuma-akita-display.dtsi  zuma-akita-dma-heap.dtsi  zuma-akita-dvt1-2nd-fab.dts  zuma-akita-dvt1.dts  zuma-akita-evt1-broadcom-gnss.dts  zuma-akita-evt1-lassen-gnss.dts  zuma-akita-evt1-samsung-gnss.dts  zuma-akita-evt1_1.dts  zuma-akita-gnss-samsung.dtsi  zuma-akita-haptics.dtsi  zuma-akita-ldaf.dtsi  zuma-akita-mp.dts  zuma-akita-pcie.dtsi  zuma-akita-pmic.dtsi  zuma-akita-proto1-A0-broadcom-gnss.dts  zuma-akita-proto1-A0-lassen-gnss.dts  zuma-akita-proto1-A0-samsung-gnss.dts  zuma-akita-proto1-B0-broadcom-gnss.dts  zuma-akita-proto1-B0-lassen-gnss.dts  zuma-akita-proto1-B1-broadcom-gnss.dts  zuma-akita-proto1-B1-lassen-gnss.dts  zuma-akita-proto1-B1-samsung-gnss.dts  zuma-akita-proto1_1-broadcom-gnss-sky.dts  zuma-akita-proto1_1-broadcom-gnss-wingboard.dts  (+15 more)
insmod_cfg/: init.insmod.akita.cfg
